# dioxuscms

./: Cargo.toml  Dioxus.toml
assets/: tailwind.css
src/: db.rs  main.rs
src/components/: dog.rs  mod.rs
src/views/: dogs.rs  mod.rs  navbar.rs
src/views/admin/: dashboard.rs  mod.rs  post_edit.rs
