[package]
name = "dioxuscms"
version = "0.1.0"
authors = ["mr"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }

reqwest = { version = "0.13.3", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"

# 后端专属依赖 (optional = true)，防止它们被编译到 WASM 端引发错误
tokio = { version = "1.52.3", features = ["full"], optional = true }
sqlx = { version = "0.8.6", features = [
    "macros",
    "postgres",
    "runtime-tokio",
], optional = true }

dotenvy = "0.15" 

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = [
    "dioxus/server", 
    "dep:sqlx",
    "dep:tokio",
    ]
